--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "version": "1.0.0",
   "description": "GanApp Angular project",
   "main": "app.js",
+  "engines": {
+    "node": "6.10.0"
+  },
   "scripts": {
-    "start": "node ./bin/www",
-    "test": "node %NODE_DEBUG_OPTION% app.js",
+    "start": "node app.js",
+    "test": "node app.js",
     "dev": "nodemon app.js"
   },
   "repository": {
@@ -24,16 +27,20 @@
   },
   "homepage": "https://github.com/nick-ryb/ganapp-info#readme",
   "dependencies": {
-    "body-parser": "~1.15.2",
+    "angular": "1.6.2",
+    "body-parser": "~1.17.0",
     "cookie-parser": "~1.4.3",
-    "debug": "~2.2.0",
-    "express": "~4.14.0",
-    "hbs": "~4.0.1",
-    "jquery": "^2.1.4",
+    "debug": "~2.6.1",
+    "express": "~4.15.0",
+    "express-mongo-db": "2.0.3",
+    "jquery": "^3.1.1",
     "moment": "^2.9.0",
-    "mongodb": "^2.2.21",
-    "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "mongodb": "^2.2.24",
+    "morgan": "~1.8.1",
+    "morgan-json": "1.1.0",
+    "multer": "^1.3.0",
+    "rotating-file-stream": "1.1.9",
+    "serve-favicon": "~2.4.1"
   },
   "devDependencies": {
     "nodemon": "^1.11.0"
